--- a/src/css/AddList.css
+++ b/src/css/AddList.css
@@ -4,8 +4,8 @@
   top: -6.1rem;
   z-index: 100;
   color: #fff;
-  -webkit-transition: all 0.4s ease-in-out;
-  transition: all 0.4s ease-in-out;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 .main-wrapper.open {
