--- a/src/sass/AddList.scss
+++ b/src/sass/AddList.scss
@@ -8,7 +8,7 @@ $main-comp-color: #ad296b;
   z-index: 100;
   color: #fff;
 
-  transition: all 0.4s ease-in-out;
+  transition: all 0.3s ease;
 
   &.open {
     top: 4rem;
