--- a/src/css/List.css
+++ b/src/css/List.css
@@ -1,19 +1,34 @@
 .list {
   min-width: 15rem;
+  max-width: 16rem;
   min-height: 4rem;
-  background: #baa898;
   margin: 10px;
   padding: 10px;
   color: #fff;
   border-radius: 4px 4px 7px 7px;
-  -webkit-box-shadow: 0.5px 3px 0px rgba(186, 168, 152, 0.6);
-          box-shadow: 0.5px 3px 0px rgba(186, 168, 152, 0.6);
 }
 
 .list .header {
+  margin-bottom: 1rem;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.list .header h1 {
+  width: 70%;
+  overflow: hidden;
+  text-overflow: ellipsis;
   font-size: 1.2rem;
   text-transform: capitalize;
-  margin-bottom: 1rem;
+}
+
+.list .header a {
+  cursor: pointer;
 }
 
 .list ul {
@@ -27,6 +42,11 @@
 .list ul li span {
   margin-left: -5px;
   height: 100%;
+  cursor: pointer;
+}
+
+.list ul li span.done {
+  text-decoration: line-through;
 }
 
 .list ul li form {
@@ -51,7 +71,7 @@
   border: none;
   border-bottom: 2px #fff solid;
   outline: none;
-  background-color: #baa898;
+  background: inherit;
   color: #fff;
   font-size: 1rem;
 }
